--- a/InventoryMacOS/GoogleService-Info.plist
+++ b/InventoryMacOS/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.KyleZellerInventoryMacOS</string>
+	<string>com.KyleZeller.InventoryManagerMacOS</string>
 	<key>PROJECT_ID</key>
 	<string>inventory-production-a0527</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:715530496768:ios:2ed8564a1112a759d921e5</string>
+	<string>1:715530496768:ios:8379f2e965ccd5a9d921e5</string>
 </dict>
 </plist>
