--- a/InventoryMacOS/InventoryMacOS/InventoryMacOS.entitlements
+++ b/InventoryMacOS/InventoryMacOS/InventoryMacOS.entitlements
@@ -4,7 +4,15 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.cs.allow-jit</key>
+	<true/>
+	<key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>keychain-access-groups</key>
+	<array/>
 </dict>
 </plist>
